<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16.dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_contact_data"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorPrimary" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:hint="@string/lbl_address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.dp"
            android:text="@string/section_location_data"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorPrimary" />

        <AutoCompleteTextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:hint="@string/lbl_country" />

        <AutoCompleteTextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:hint="@string/lbl_city" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24.dp"
            android:text="@string/action_submit" />

    </LinearLayout>
</ScrollView>
