<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16.dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_basic_data"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorPrimary" />

        <EditText
            android:id="@+id/names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_names"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/surnames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:hint="@string/lbl_surnames"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.dp"
            android:text="@string/lbl_sex" />

        <RadioGroup
            android:id="@+id/sexKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_female" />

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_other" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16.dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_additional_data"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/birthDateMillis"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp"
            android:text="@string/lbl_birthdate" />

        <Spinner
            android:id="@+id/educationKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24.dp"
            android:text="@string/action_next" />

    </LinearLayout>
</ScrollView>
